<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginHorizontal="40dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_title_text"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/title"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/te_enter_description"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/info"
        app:layout_constraintTop_toBottomOf="@+id/enter_title_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_setup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/take_time"
        android:background="@color/black"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@+id/te_enter_description"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_setup_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/seting_location"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@+id/mb_setup_time"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dismiss"
        app:layout_constraintEnd_toStartOf="@+id/b_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_setup_location" />

    <Button
        android:id="@+id/b_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dismiss"
        app:layout_constraintTop_toBottomOf="@+id/mb_setup_location" />

</androidx.constraintlayout.widget.ConstraintLayout>
